--- a/style.css
+++ b/style.css
@@ -250,3 +250,73 @@ body{
 }
 
 
+@media (max-width:1200px) {
+    .sidebar {
+        width: 70px;
+        overflow-x: hidden;
+    }
+    .content {
+        width: calc(0vw - 70px);
+    }
+    .more {
+        display: none;
+    }
+}
+
+@media (max-width:1050px) {
+    .video-container {
+        grid-template-columns: repeat(3, 1fr);
+    }
+    .sidebar {
+        width: 70px;
+        overflow-x: hidden;
+    }
+    .content {
+        width: calc(0vw - 70px);
+    }
+    .more {
+        display: none;
+    }
+}
+
+@media (max-width:820px) {
+    .video-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .sidebar {
+        width: 70px;
+        overflow-x: hidden;
+    }
+    .content {
+        width: calc(0vw - 70px);
+    }
+    .more {
+        display: none;
+    }
+}
+
+@media (max-width:600px) {
+    .video-container {
+        grid-template-columns: 1fr;
+        margin-left: 80px;
+        width: 440px;
+    }
+    .side-bar{
+        visibility: hidden;
+        display: none;
+    }
+    .thumbnail{
+        width: 260px;
+        left: 10px;
+    }
+    .more {
+        display: none;
+    }
+    .filters{
+        left: 10px;
+        width: 500px;
+    }
+    .search-bar{
+        width: 100px;
+    }
+}
